<resources>
    <string name="app_name">TicPacToe</string>
    <string name="play_button">Play</string>
    <string name="tic_10_pac_10_toe">tIc pAc tOe</string>
    <string name="play">Play</string>
    <string name="highscore">Highscore</string>
    <string name="nameHintOne">Player One Name</string>
    <string name="nameHintTwo">Player Two Name</string>
    <string name="vs_ai">vs AI</string>
    <string name="botName">TTTBot</string>
    <string name="pacImageDesc">Pacman</string>
    <string name="cheImageDesc">Cherry</string>
    <string name="inkImageDesc">Inky</string>
    <string name="start_game">Start Game</string>
    <string name="choose_your_weapon">Choose your weapon</string>
    <string name="gameboard">gameBoard</string>
    <string name="spot">spot</string>
    <string name="playerIcon">Player Icon</string>
    <string name="home">Home</string>
    <string name="packageName">no.alacho.playerground.shared</string>
    <string name="sharedPrefs">highscoreList</string>
</resources>
