<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/playerOneNameInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/nameHintOne"
        android:textColor="@color/playerOneColor"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLength="14"/>

    <EditText
        android:id="@+id/playerTwoNameInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@drawable/edit_text_selector"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:hint="@string/nameHintTwo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/playerOneNameInput"
        app:layout_constraintTop_toTopOf="@+id/playerOneNameInput"
        android:maxLength="14"/>

    <Switch
        android:id="@+id/botSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="20dp"
        android:switchPadding="10dp"
        app:layout_constraintStart_toStartOf="@+id/playerOneNameInput"
        app:layout_constraintTop_toBottomOf="@+id/playerOneNameInput" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:text="@string/vs_ai"
        app:layout_constraintStart_toEndOf="@+id/botSelector"
        app:layout_constraintTop_toBottomOf="@+id/playerTwoNameInput" />

    <ImageButton
        android:id="@+id/pacmanImage"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:src="@mipmap/pacman"
        android:scaleType="centerInside"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="@+id/playerOneNameInput"
        app:layout_constraintTop_toBottomOf="@+id/botSelector"
        android:contentDescription="@string/pacImageDesc"
        android:tag="@string/pacImageDesc"/>

    <ImageButton
        android:id="@+id/cherryImage"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:src="@mipmap/cherry"
        android:background="@color/transparent"
        android:contentDescription="@string/cheImageDesc"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/pacmanImage"
        android:tag="@string/cheImageDesc"
        app:layout_constraintTop_toTopOf="@+id/pacmanImage" />

    <ImageButton
        android:id="@+id/inkyImage"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:src="@mipmap/inky"
        android:background="@color/transparent"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/cherryImage"
        app:layout_constraintTop_toTopOf="@+id/pacmanImage"
        android:tag="@string/inkImageDesc"
        android:contentDescription="@string/inkImageDesc" />

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="@mipmap/btn_background"
        android:contentDescription="@string/start_game"
        android:text="@string/start_game"
        android:textColor="@color/logoColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/pacmanImage"
        app:layout_constraintTop_toBottomOf="@+id/cherryImage" />

</androidx.constraintlayout.widget.ConstraintLayout>